--- a/backup_index.html
+++ b/backup_index.html
@@ -1,37 +1,18 @@
  <!DOCTYPE html>
-<!--[if lt IE 7]>      <html class="no-js lt-ie9 lt-ie8 lt-ie7"> <![endif]-->
-<!--[if IE 7]>         <html class="no-js lt-ie9 lt-ie8"> <![endif]-->
-<!--[if IE 8]>         <html class="no-js lt-ie9"> <![endif]-->
-<!--[if gt IE 8]><!--> <html class="no-js"> <!--<![endif]-->
+<html class="no-js">
     <head>
-    <!-- Basic Page Needs
-    ================================================== -->
         <meta charset="utf-8">
-        <title>Cypras-One page html5 template</title>
+        <title>Kost Putra Barito Yogyakarta</title>
         <meta name="description" content="">
-        <!-- Mobile Specific Metas
-    ================================================== -->
         <meta name="viewport" content="width=device-width, initial-scale=1">
-
-        <!-- Place favicon.ico and apple-touch-icon.png in the root directory -->
-         <!-- CSS
-         ================================================== -->
-        <!-- Bootstrap -->
         <link rel="stylesheet" href="css/bootstrap.min.css"/>
-        <!-- FontAwesome -->
         <link rel="stylesheet" href="css/font-awesome.min.css"/>
-        <!-- Animation -->
         <link rel="stylesheet" href="css/animate.css" />
-        <!-- Owl Carousel -->
         <link rel="stylesheet" href="css/owl.carousel.css"/>
         <link rel="stylesheet" href="css/owl.theme.css"/>
-        <!-- Pretty Photo -->
         <link rel="stylesheet" href="css/prettyPhoto.css"/>
-        <!-- Main color style -->
         <link rel="stylesheet" href="css/red.css"/>
-        <!-- Template styles-->
         <link rel="stylesheet" href="css/custom.css" />
-        <!-- Responsive -->
         <link rel="stylesheet" href="css/responsive.css" />
         <link rel="stylesheet" href="css/jquery.fancybox.css?v=2.1.5" type="text/css" media="screen" />
 	
@@ -41,10 +22,6 @@
     </head>
 
  <body data-spy="scroll" data-target=".navbar-fixed-top">
-        <!--[if lt IE 7]>
-            <p class="browsehappy">You are using an <strong>outdated</strong> browser. Please <a href="http://browsehappy.com/">upgrade your browser</a> to improve your experience.</p>
-        <![endif]-->
-
     <header id="section_header" class="navbar-fixed-top main-nav" role="banner">
     	<div class="container">
     		<!-- <div class="row"> -->
@@ -56,18 +33,18 @@
                             <span class="icon-bar"></span>
                         </button>
                         <a class="navbar-brand" href="#">
-                            <img src="images/logo2.png" alt="">
+                            Putra Barito
                         </a>
                  </div><!--Navbar header End-->
                  	<nav class="collapse navbar-collapse navigation" id="bs-example-navbar-collapse-1" role="navigation">
                         <ul class="nav navbar-nav navbar-right ">
                            	<li class="active"> <a href="#slider_part" class="page-scroll">Home </a></li>
-                            <li><a href="#service"  class="page-scroll">Services</a> </li>
-                            <li><a href="#portfolio" class="page-scroll" >Portfolio</a> </li>
-                            <li><a href="#about" class="page-scroll">About Us </a> </li>
-                            <li><a href="#team" class="page-scroll">Our Team </a> </li>
-                            <li><a href="#blog" class="page-scroll">Blog</a> </li>
-                            <li><a href="#contact" class="page-scroll">Contact Us</a> </li>
+                            <li><a href="#fasilitas"  class="page-scroll">Fasilitas</a> </li>
+                            <li><a href="#profile" class="page-scroll" >Profile</a> </li>
+                            <li><a href="#reservasi" class="page-scroll">Reservasi </a> </li>
+                            <li><a href="#maps" class="page-scroll">Maps </a> </li>
+                            <li><a href="#reservasi" class="page-scroll">Reservasi</a> </li>
+                            <li><a href="#login" class="page-scroll">Login</a> </li>
                         </ul>
                      </nav>
                 </div><!-- /.container-fluid -->
@@ -89,7 +66,7 @@
            	 		</div>
            	 		<div class="carousel-caption">
                	 		<div class="col-md-12 col-xs-12 text-center">
-                      <h2>Cyprass</h2>
+                      <h4>Putra Barito</h4>
                	 			<h3 class="animated2"> <b>Creative</b> Modern and clean </h3>
                	 			<div class="line"></div>
                	 			<p class="animated3">Unique clean design</p>
@@ -140,7 +117,7 @@
 
 <!-- Service Area start -->
 
-    <section id="service">
+    <section id="fasilitas">
         <div class="container">
                 <div class="row">
                     <div class="col-md-12 col-sm-12 col-xs-12">
@@ -258,7 +235,7 @@
 
 <!-- Portfolio works Start -->
 
-    <section id="portfolio">
+    <section id="profile">
         <div class="container">
             <div class="row">
                 <div class="col-md-12 col-sm-12 col-xs-12">
@@ -1395,67 +1372,44 @@
     </div>
     <!-- End Back To Top Button -->
 
-
-
-<!-- Javascript Files
-    ================================================== -->
-    <!-- initialize jQuery Library -->
-
-		<!-- initialize jQuery Library -->
-        <!-- Main jquery -->
 		    <script type="text/javascript" src="js/jquery.js"></script>
-        <!-- Bootstrap jQuery -->
-         <script src="js/bootstrap.min.js"></script>
-        <!-- Owl Carousel -->
+        <script src="js/bootstrap.min.js"></script>
         <script src="js/owl.carousel.min.js"></script>
-        <!-- Isotope -->
         <script src="js/jquery.isotope.js"></script>
-        <!-- Pretty Photo -->
 		    <script type="text/javascript" src="js/jquery.prettyPhoto.js"></script>
-        <!-- SmoothScroll -->
         <script type="text/javascript" src="js/smooth-scroll.js"></script>
-        <!-- Image Fancybox -->
         <script type="text/javascript" src="js/jquery.fancybox.pack.js?v=2.1.5"></script>
-        <!-- Counter  -->
         <script type="text/javascript" src="js/jquery.counterup.min.js"></script>
-        <!-- waypoints -->
         <script type="text/javascript" src="js/waypoints.min.js"></script>
-        <!-- Bx slider -->
         <script type="text/javascript" src="js/jquery.bxslider.min.js"></script>
-        <!-- Scroll to top -->
         <script type="text/javascript" src="js/jquery.scrollTo.js"></script>
-        <!-- Easing js -->
         <script type="text/javascript" src="js/jquery.easing.1.3.js"></script>
-   		 <!-- PrettyPhoto -->
         <script src="js/jquery.singlePageNav.js"></script>
-      	<!-- Wow Animation -->
         <script type="js/javascript" src="js/wow.min.js"></script>
-        <!-- Google Map  Source -->
         <script type="text/javascript" src="js/gmaps.js"></script>
-			 <!-- Custom js -->
         <script src="js/custom.js"></script>
-	     <script>
-		// Google Map - with support of gmaps.js
-     var map;
-        map = new GMaps({
-          div: '#map',
-          lat: 23.709921,
-          lng: 90.407143,
-          scrollwheel: false,
-          panControl: false,
-          zoomControl: false,
-        });
+	      <script>
+  		// Google Map - with support of gmaps.js
+       var map;
+          map = new GMaps({
+            div: '#map',
+            lat: 23.709921,
+            lng: 90.407143,
+            scrollwheel: false,
+            panControl: false,
+            zoomControl: false,
+          });
 
-        map.addMarker({
-          lat: 23.709921,
-          lng: 90.407143,
-          title: 'Smilebuddy',
-          infoWindow: { 
-            content: '<p> Smilebuddy, Dhanmondhi 27</p>'
-          },
-          icon: "images/map1.png"
-        });
-      	</script>
+          map.addMarker({
+            lat: 23.709921,
+            lng: 90.407143,
+            title: 'Smilebuddy',
+            infoWindow: { 
+              content: '<p> Smilebuddy, Dhanmondhi 27</p>'
+            },
+            icon: "images/map1.png"
+          });
+        	</script>
  
     </body>
 </html>
