--- a/blog-single.html
+++ b/blog-single.html
@@ -1,53 +1,27 @@
  <!DOCTYPE html>
-<!--[if lt IE 7]>      <html class="no-js lt-ie9 lt-ie8 lt-ie7"> <![endif]-->
-<!--[if IE 7]>         <html class="no-js lt-ie9 lt-ie8"> <![endif]-->
-<!--[if IE 8]>         <html class="no-js lt-ie9"> <![endif]-->
-<!--[if gt IE 8]><!--> <html class="no-js"> <!--<![endif]-->
+<html class="no-js">
     <head>
-    <!-- Basic Page Needs
-    ================================================== -->
         <meta charset="utf-8">
-        <title>Cypras-One page html5 template</title>
+        <title>Kost Kosan</title>
         <meta name="description" content="">
-        <!-- Mobile Specific Metas
-    ================================================== -->
         <meta name="viewport" content="width=device-width, initial-scale=1">
-
-        <!-- Place favicon.ico and apple-touch-icon.png in the root directory -->
-         <!-- CSS
-         ================================================== -->
-        <!-- Bootstrap -->
         <link rel="stylesheet" href="css/bootstrap.min.css"/>
-        <!-- FontAwesome -->
         <link rel="stylesheet" href="css/font-awesome.min.css"/>
-        <!-- Animation -->
         <link rel="stylesheet" href="css/animate.css" />
-        <!-- Owl Carousel -->
         <link rel="stylesheet" href="css/owl.carousel.css"/>
         <link rel="stylesheet" href="css/owl.theme.css"/>
-        <!-- Pretty Photo -->
         <link rel="stylesheet" href="css/prettyPhoto.css"/>
-        <!-- Bx slider -->
         <link rel="stylesheet" href="css/jquery.bxslider.css"/>
-       
-        <!-- Template styles-->
         <link rel="stylesheet" href="css/custom.css" />
-         <!-- color style -->
         <link rel="stylesheet" href="css/red.css"/>
-        <!-- Responsive  -->
         <link rel="stylesheet" href="css/responsive.css" />
         <link rel="stylesheet" href="css/jquery.fancybox.css?v=2.1.5" type="text/css" media="screen" />
-	
 		<script type="text/javascript" src="http://maps.google.com/maps/api/js?sensor=false"></script>
         <link href='http://fonts.googleapis.com/css?family=Lato:400,300' rel='stylesheet' type='text/css'>
         <link href='http://fonts.googleapis.com/css?family=Raleway:400,300,500' rel='stylesheet' type='text/css'>
     </head>
 
  <body data-spy="scroll" data-target=".navbar-fixed-top">
-        <!--[if lt IE 7]>
-            <p class="browsehappy">You are using an <strong>outdated</strong> browser. Please <a href="http://browsehappy.com/">upgrade your browser</a> to improve your experience.</p>
-        <![endif]-->
-
     <header id="section_header" class="navbar-fixed-top main-nav" role="navigation">
     	<div class="container">
     		<!-- <div class="row"> -->
@@ -64,7 +38,7 @@
                  </div><!--Navbar header End-->
                  	<nav class="collapse navbar-collapse" id="bs-example-navbar-collapse-1">
                         <ul class="nav navbar-nav navbar-right">
-                            <li class="active">
+                            <li>
                                <a href="index.html" data-scroll >Home </a>
                             </li>
                             <li>
@@ -558,53 +532,30 @@
 <!-- Footer Area End -->
 
 
-
 <!-- Back To Top Button -->
     <section id="back-top">
         <a href="#home" class="scroll"></a>
     </section>
     <!-- End Back To Top Button -->
-
-
-
-<!-- Javascript Files
-    ================================================== -->
-    <!-- initialize jQuery Library -->
-
-		<!-- initialize jQuery Library -->
 		<script type="text/javascript" src="js/jquery2.js"></script>
-        <!-- Bootstrap jQuery -->
-         <script src="js/bootstrap.min.js"></script>
-        <!-- Owl Carousel -->
+        <script src="js/bootstrap.min.js"></script>
         <script src="js/owl.carousel.js"></script>
-         <script src="js/owl.carousel.min.js"></script>
-
-        <!-- Isotope -->
+        <script src="js/owl.carousel.min.js"></script>
         <script src="js/jquery.isotope.js"></script>
-        <!-- Pretty Photo -->
-
-        <!-- SmoothScroll -->
         <script type="text/javascript" src="js/smooth-scroll.js"></script>
-        <!-- Image Fancybox -->
         <script type="text/javascript" src="js/jquery.fancybox.pack.js?v=2.1.5"></script>
-        <!-- Counter  -->
         <script type="text/javascript" src="js/jquery.counterup.min.js"></script>
         <script type="text/javascript" src="js/waypoints.min.js"></script>
         <script type="text/javascript" src="js/jquery.bxslider.min.js"></script>
-
    		<script src="js/jquery.prettyPhoto.js"></script>
-      	<!-- Wow Animation -->
         <script type="js/javascript" src="js/wow.min.js"></script>
-        <!-- Google Map  Source -->
         <script type="text/javascript" src="js/gmaps.js"></script>
-			<!-- Custom js -->
         <script src="js/custom.js"></script>
-	   <script>
+	    <script>
               $('#portfolio-slider').bxSlider({
                 mode: 'fade',
                 autoControls: false
               });
         </script>
-      
     </body>
 </html>
