--- a/backup_index.html
+++ b/backup_index.html
@@ -41,9 +41,9 @@
                            	<li class="active"> <a href="#slider_part" class="page-scroll">Home </a></li>
                             <li><a href="#fasilitas"  class="page-scroll">Fasilitas</a> </li>
                             <li><a href="#profile" class="page-scroll" >Profile</a> </li>
-                            <li><a href="#reservasi" class="page-scroll">Reservasi </a> </li>
+                            <li><a href="#tipekamar" class="page-scroll">Reservasi </a> </li>
                             <li><a href="#maps" class="page-scroll">Maps </a> </li>
-                            <li><a href="#reservasi" class="page-scroll">Reservasi</a> </li>
+                            <li><a href="#tipekamar" class="page-scroll">Reservasi</a> </li>
                             <li><a href="#login" class="page-scroll">Login</a> </li>
                         </ul>
                      </nav>
